# anchora

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README RU.md  README.md  debug_parser.rs  package-lock.json  test_file.rs  test_notes.rs
.anchora/: tasks.json
doc/: README_RU.md  README_RU_VSCODE.md
src/: communication.rs  error_macros.rs  file_parser.rs  file_watcher.rs  handler.rs  lib.rs  main.rs  search_engine.rs  statistics.rs  storage.rs  task_manager.rs  validation.rs
test/: communication_tests.rs  file_parser_tests.rs  integration_tests.rs  mod.rs  storage_tests.rs  task_manager_tests.rs
vscode/: .eslintrc.json  .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode/src/: client.ts  commands.ts  decorations.ts  extension.ts  noteProvider.ts  statusBar.ts  taskProvider.ts  types.ts
